contenido controller, js de insertar, obtener

--- a/index.html
+++ b/index.html
@@ -136,5 +136,67 @@
     </div>
 
     <footer id="comentarios">copyright 2024</footer>
+
+<script>
+
+
+    function getComments() {
+        $.ajax({
+          type: "POST",
+          data: {
+            opcionOpc: 2,
+          },
+          url: "controllers/ComentariosController.php",
+          success: function (data) {
+            $("#tblComentariosTbody").html(data); //revisar si js, jquery usaban el id o el name
+          },
+        });
+      }
+
+      
+//Jquery
+$(document).ready(function () {
+    //se asegura de que el arbol dom ya este cargado
+    $("#btnActualizar").hide(); //oculta el boton
+    $("#alert1").hide(); //oculta la alerta//hide() en gral oculta elementos
+
+    getComments();
+
+    $("#btnInsertar").click(function () {
+      //se le otorga el envento onclick
+      $(`#opcionOpc`).prop("value", 1);
+      // $("#frmContacto").submit(function(){
+      var formData = $("#frmContacto").serialize(); //serializa el fomr,//investigagar mas
+      $.ajax({
+        //peticion ajax; hay maneraas mas recientes, investiga, no recuerdo el nombre
+        type: "POST", //escoge como mandar los datos, GET//POST//PUT//DELETE // anteriormente especificada en el method del form
+        url: "controllers/ComentariosController.php", //lugar de destino del envio//ruta anteriormente en action del form
+        data: formData, //datos a mandar
+        success: function (data) {
+          //tras la accion(mensaje), recibe una respuesta
+          console.log(data); //imprime data para saber su contenido
+          $("#alert1").show(); //muestra la alerta
+          $("#alert1").html(data); //coloca la info de la respuesta data, en la alerta
+          if (data.trim() === "Hemos recibido su comentario exitosamente.") {
+            //compara el valor recibido con el valor esperado
+            $("#alert1").attr("class", "alert-primary"); //otorga nuevos/distintos estilos de css boostrap
+          } else {
+            $("#alert1").attr("class", "alert-danger"); //addClass tambien funciona
+          }
+        },
+      });
+    });
+    return false; //retorna respuesta//investiga que onda
+  });
+
+  //});
+
+</script>
+
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
